more plugin updates and localforage src updates

--- a/www/index.html
+++ b/www/index.html
@@ -33,8 +33,8 @@
     <link rel="stylesheet" href="lib/ol/ol3-layerswitcher.css">
     <script src="lib/ol/ol3-layerswitcherMODIFIED.js"></script>
     <!-- local storage with localForage and SQLite Driver -->
-    <script src="lib/localforage/dist/localforage.js"></script>
-    <script src="lib/localforage-cordovasqlitedriver/src/localforage-cordovasqlitedriver.js"></script>
+    <script src="lib/localforage.min.js"></script>
+    <script src="lib/localforage-cordovasqlitedriver.js"></script>
 
     <!-----------------------------------------------------------------
     MOBILE APP ONLY
