--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -50,8 +50,8 @@
     <link rel="stylesheet" href="lib/ol/ol3-layerswitcher.css">
     <script src="lib/ol/ol3-layerswitcherMODIFIED.js"></script>
     <!-- local storage with localForage and SQLite Driver -->
-    <script src="lib/localforage/dist/localforage.js"></script>
-    <script src="lib/localforage-cordovasqlitedriver/src/localforage-cordovasqlitedriver.js"></script>
+    <script src="lib/localforage.min.js"></script>
+    <script src="lib/localforage-cordovasqlitedriver.js"></script>
 
     <!-----------------------------------------------------------------
     NOT USED FOR WEB BUT NEEDED TO HIDE MISSING ERRORS
