--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -10,7 +10,7 @@
      WEB APP ONLY LIBRARIES
     ------------------------------------------------------------------->
     <!-- jQuery -->
-    <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="lib/jquery.min.js"></script>
     <!-- Golden Layout -->
     <script type="text/javascript" src="lib/goldenlayout/goldenlayout.min.js"></script>
     <link type="text/css" rel="stylesheet" href="lib/goldenlayout/goldenlayout-base.css"/>
