creating thin section mode for microstructures

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -62,8 +62,11 @@
         <ion-item nav-clear menu-close href='#/app/image-basemaps'>
           Image Basemaps
         </ion-item>
-        <ion-item nav-clear menu-close href='#/app/strat-sections' ng-show='vm.getIsStratMode()'>
+        <ion-item nav-clear menu-close href='#/app/strat-sections' ng-show='vm.getIsMode("strat_mode")'>
           Strat Sections
+        </ion-item>
+        <ion-item nav-clear menu-close href='#/app/thin-sections' ng-show='vm.getIsMode("thin_section_mode")'>
+          Thin Sections
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/other-maps'>
           Other Basemaps
