--- a/www/app/misc/misc.directive.html
+++ b/www/app/misc/misc.directive.html
@@ -16,7 +16,7 @@
   </div>
   <ion-input class='item item-input'>
     <ion-label>Number of Spots:</ion-label>
-    <input type='number' ng-model='vm.pointsToGenerate' value={{vm.pointsToGenerate}} placeholder='How many Spots?'>
+    <input type='number' ng-model='vm.pointsToGenerate' placeholder='How many Spots?'>
   </ion-input>
   <button ng-click='vm.submit(vm.pointsToGenerate)'
           class='button button-clear button-positive padding-left'>
