--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -83,6 +83,8 @@
     <script src="app/maps/other-maps/other-maps.controller.js"></script>
     <script src="app/maps/strat-section/strat-section.controller.js"></script>
     <script src="app/maps/strat-sections/strat-sections.controller.js"></script>
+    <script src="app/maps/thin-section/thin-section.controller.js"></script>
+    <script src="app/maps/thin-sections/thin-sections.controller.js"></script>
     <script src="app/menu/menu.controller.js"></script>
     <script src="app/misc/misc.controller.js"></script>
     <script src="app/project/description/description.controller.js"></script>
@@ -101,6 +103,7 @@
     <!-- ng spot tab controllers -->
     <script src="app/spot/3d-structures/3dstructures-tab.controller.js"></script>
     <script src="app/spot/images/images-tab.controller.js"></script>
+    <script src="app/spot/micro/thin-section/thin-section-tab.controller.js"></script>
     <script src="app/spot/minerals/minerals-tab.controller.js"></script>
     <script src="app/spot/nesting/nesting-tab.controller.js"></script>
     <script src="app/spot/orientations/orientations-tab.controller.js"></script>
@@ -130,6 +133,7 @@
     <script src="app/maps/offline-maps/slippy-tile-names.factory.js"></script>
     <script src="app/maps/map/symbology.factory.js"></script>
     <script src="app/maps/strat-section/strat-section.factory.js"></script>
+    <script src="app/maps/thin-section/thin-section.factory.js"></script>
     <script src="app/project/project.factory.js"></script>
     <script src="app/shared/auto-login.factory.js"></script>
     <script src="app/shared/remote-server.factory.js"></script>
@@ -162,6 +166,8 @@
     <script src="app/maps/image-basemaps/image-basemaps.directive.js"></script>
     <script src="app/maps/strat-section/spots-this-map.directive.js"></script>
     <script src="app/maps/strat-sections/strat-sections.directive.js"></script>
+    <script src="app/maps/thin-section/spots-this-thin-section-map.directive.js"></script>
+    <script src="app/maps/thin-sections/thin-sections.directive.js"></script>
     <script src="app/maps/other-maps/other-maps.directive.js"></script>
     <script src="app/misc/misc.directive.js"></script>
     <script src="app/project/description/description.directive.js"></script>
@@ -170,6 +176,7 @@
     <script src="app/project/tools/tools.directive.js"></script>
     <script src="app/spot/3d-structures/3dstructures-tab.directive.js"></script>
     <script src="app/spot/images/images-tab.directive.js"></script>
+    <script src="app/spot/micro/thin-section/thin-section-tab.directive.js"></script>
     <script src="app/spot/minerals/minerals-tab.directive.js"></script>
     <script src="app/spot/nesting/nesting-tab.directive.js"></script>
     <script src="app/spot/orientations/orientations-tab.directive.js"></script>
