--- a/www/app/project/manage/manage-project.directive.html
+++ b/www/app/project/manage/manage-project.directive.html
@@ -71,4 +71,18 @@
       </button>
     </ion-item>
   </ion-list>
+  <div class='field-group item item-divider'>
+    Saved Minerals Collections
+  </div>
+  <ion-list>
+    <div class='padding' ng-show='vm.mineralCollections.length <= 0'>
+      There are no custom mineral collections added yet. To add a custom mineral collection go to the Minerals page, select desired minerals, and select "Save Collection"
+    </div>
+    <ion-item ng-repeat='mineralCollection in vm.mineralCollections | orderBy:"$index" track by $index' class='item-button-right'>
+      {{ mineralCollection.name }}
+      <button class='button button-clear button-assertive' ng-click='vm.deleteCollection($index)'>
+        <i class='icon ion-minus-circled'></i>
+      </button>
+    </ion-item>
+  </ion-list>
 </div>
