Micro: added data-tap-disabled='true' to allow clicks on map controls

--- a/www/app/maps/thin-section/thin-section.web.html
+++ b/www/app/maps/thin-section/thin-section.web.html
@@ -8,7 +8,7 @@
       </ion-item>
     </ion-list>
   </div>
-  <div id='maps' class="thin-section-maps">
+  <div id='maps' class="thin-section-maps" data-tap-disabled='true'>
   </div>
 
   <!-- Side Slide Content -->
