--- a/www/app/maps/thin-section/spots-this-thin-section-map.html
+++ b/www/app/maps/thin-section/spots-this-thin-section-map.html
@@ -46,10 +46,10 @@
               </span>
         </div>
       </div>
-      <button class='button button-clear button-assertive'
+      <!--<button class='button button-clear button-assertive'
               ng-click='vm.deleteSpot(vm.thisSpotWithThinSection)'>
         <i class='icon ion-minus-circled'></i>
-      </button>
+      </button>-->
     </ion-item>
   </ion-list>
   <div class='item item-divider'>
@@ -68,10 +68,10 @@
           </span>
         </div>
       </div>
-      <button class='button button-clear button-assertive'
+      <!--<button class='button button-clear button-assertive'
               ng-click='vm.deleteSpot(spot)'>
         <i class='icon ion-minus-circled'></i>
-      </button>
+      </button>-->
     </ion-item>
   </ion-list>
   <div class='padding'>Section Bottom</div>
@@ -90,10 +90,10 @@
           </span>
         </div>
       </div>
-      <button class='button button-clear button-assertive'
+      <!--<button class='button button-clear button-assertive'
               ng-click='vm.deleteSpot(spot)'>
         <i class='icon ion-minus-circled'></i>
-      </button>
+      </button>-->
     </ion-item>
   </ion-list>
 </div>
