--- a/www/app/maps/image-basemap/image-basemap-popover.html
+++ b/www/app/maps/image-basemap/image-basemap-popover.html
@@ -10,6 +10,9 @@
       <ion-item ng-show='vm.isiOS()' ng-click='vm.stereonetSpots()'>
         <i class="icon ion-disc"></i> Lasso Spots for Stereonet
       </ion-item>
+      <ion-item ng-click='vm.startCalculateImageWidth()'>
+        <i class="ion-code-working"></i> Calculate Image Width
+      </ion-item>
       <ion-item ng-show='vm.isNesting' ng-click='vm.toggleNesting()'>
         <i class="icon ion-disc"></i> End Continous Nesting
       </ion-item>
