Minerals: added factory, dir, and info modal

--- a/www/index.html
+++ b/www/index.html
@@ -119,6 +119,7 @@
     <script src="app/shared/livedb.factory.js"></script>
     <script src="app/shared/localstorage.factory.js"></script>
     <script src="app/spot/images/image.factory.js"></script>
+    <script src="app/spot/minerals/minerals.factory.js"></script>
     <script src="app/spot/spot/spot.factory.js"></script>
     <script src="app/spots/spots.factory.js"></script>
     <script src="app/tag/tag.factory.js"></script>
@@ -153,6 +154,7 @@
     <script src="app/spot/3d-structures/3dstructures-tab.directive.js"></script>
     <script src="app/spot/images/images-tab.directive.js"></script>
     <script src="app/spot/minerals/minerals-tab.directive.js"></script>
+    <script src="app/spot/minerals/minerals-choices.directive.js"></script>
     <script src="app/spot/nesting/nesting-tab.directive.js"></script>
     <script src="app/spot/orientations/orientations-tab.directive.js"></script>
     <script src="app/spot/other-features/other-features-tab.directive.js"></script>
