--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -137,6 +137,7 @@
     <script src="app/shared/livedb.factory.js"></script>
     <script src="app/shared/localstorage.factory.js"></script>
     <script src="app/spot/images/image.factory.js"></script>
+    <script src="app/spot/minerals/minerals.factory.js"></script>
     <script src="app/spot/spot/spot.factory.js"></script>
     <script src="app/spots/spots.factory.js"></script>
     <script src="app/tag/tag.factory.js"></script>
@@ -170,6 +171,7 @@
     <script src="app/project/tools/tools.directive.js"></script>
     <script src="app/spot/3d-structures/3dstructures-tab.directive.js"></script>
     <script src="app/spot/images/images-tab.directive.js"></script>
+    <script src="app/spot/minerals/minerals-choices.directive.js"></script>
     <script src="app/spot/minerals/minerals-tab.directive.js"></script>
     <script src="app/spot/nesting/nesting-tab.directive.js"></script>
     <script src="app/spot/orientations/orientations-tab.directive.js"></script>
