Revert test push change

--- a/www/app/login/login.html
+++ b/www/app/login/login.html
@@ -1,4 +1,4 @@
-<ion-view view-title='Login Test Push' name='login-view'>
+<ion-view view-title='Login' name='login-view'>
   <ion-content>
     <div class='login-page scroll' align='center'>
       <div class='login-inset'>
