Minerals: refactor for modals into one modal

--- a/www/app/spot/minerals/minerals-choices.directive.html
+++ b/www/app/spot/minerals/minerals-choices.directive.html
@@ -1,19 +1,14 @@
 <div id='straboFormCtrlId' ng-controller='FormController as form'>
   <div ng-repeat='field in form.survey' class='strabo-form'>
     <div id='{{ field.name }}' ng-show='form.showField(field, vm.data)'>
-      <ion-input class='item-text-wrap strabo-choices-flex-container strabo-wrap' ng-class='form.setSelMultClass(field, vm.data)'>
-        <ion-label>
-          {{ field.label }}
-          <button class='button button-small button-icon ion-information-circled strabo-field-info-button' ng-show='field.hint' ng-click='form.showFieldInfo(field)'></button>
-        </ion-label>
-        <ion-list name='{{ field.name }}' style="z-index: 1;" class="strabo-choices-flex-item" ng-repeat='choice in form.choices | filter: { "list_name": field.type.split(" ")[1] }'
-          ng-checked='form.isOptionChecked(field.name, choice.name, vm.data)' ng-click='form.toggleChecked(field.name, choice.name, vm.data)'
-          ng-required='{{ field.required }}'>
-          <ion-checkbox>
+      <ion-input class='item-text-wrap strabo-choices-flex-container strabo-wrap' 
+        ng-class='form.setSelMultClass(field, vm.data)'>
+        <ion-checkbox name='{{ field.name }}' style="z-index: 1;" class="strabo-choices-flex-item" ng-checked='form.isOptionChecked(field.name, choice.name, vm.data)' 
+            ng-click='form.toggleChecked(field.name, choice.name, vm.data)'
+            ng-repeat='choice in form.choices | filter: { "list_name": field.type.split(" ")[1] }'
+            ng-required='{{ field.required }}'>
             {{ choice.label }}
-          </ion-checkbox>
-          <span style="z-index: 2;" class='button-small button-icon ion-information-circled strabo-field-info-button' ng-click='vmChild.showMineralInfo(choice.name); $event.immediatePreventDefault()'></span>
-        </ion-list>
+        </ion-checkbox>
       </ion-input>
     </div>
   </div>
