--- a/www/app/spot/minerals/minerals-tab.directive.html
+++ b/www/app/spot/minerals/minerals-tab.directive.html
@@ -16,7 +16,8 @@
     <span class='button-text-big'>Add From Saved Favorites Collection</span>
   </button>
   <ion-list>
-    <ion-item class='item-text-wrap item-button-right' ng-repeat='mineral in vm.spot.properties.minerals | orderBy:mineral track by $index'>
+    <ion-item class='item-text-wrap item-button-right' 
+    ng-repeat='mineral in vm.spot.properties.minerals | orderBy:mineral track by $index'>
       {{ vmChild.getLabel(mineral) }}
     </ion-item>
   </ion-list>
@@ -25,22 +26,24 @@
   </div>
   <div ng-show="vm.spot.properties.minerals" class="list">
     <div class="item item-divider item-text-wrap">
-      Create or Update a favorites collection with these minerals:
+      Create or Update a favorites collection:
     </div>
-    <ion-input class='item item-input item-select item-text-wrap' 
-      ng-show='vmChild.mineralCollections.length >= 1'>
+    <div class="padding">
+      Selected minerals from above can be saved to a new or existing collection below.
+    </div>
+    <ion-input class='item item-input item-select item-text-wrap' ng-show='vmChild.mineralCollections.length >= 1'>
       <ion-label>Select a Favorites Collection</ion-label>
-      <select ng-model='vmChild.selectedCollectionToCreate' ng-selected='vmChild.selectedCollectionToCreate'
+      <select ng-model='vmChild.selectedCollectionToCreate' ng-selected='vmChild.selectedCollectionToCreate' 
       ng-options='mineralCollection.name for mineralCollection in vmChild.createCollectionSelectBoxDisplay'
         ng-change='vmChild.changedCollectionToCreate()'>
       </select>
     </ion-input>
     <ion-input ng-show='vmChild.showNameField' class='item item-input item-stacked-label item-text-wrap'>
-      <ion-label>Collection Name:</ion-label>
+      <ion-label>New Collection Name:</ion-label>
       <input type='text' ng-model='vmChild.newCollectionName' autofocus>
     </ion-input>
     <button class="button button-clear button-positive" ng-click="vmChild.saveCollection()">
-      <i class='icon ion-archive'></i>
+      <i class='icon ion-plus-circled'></i>
       <span class='button-text-big'>Create/Update Favorites Collection</span>
     </button>
   </div>
