--- a/www/app/spot/minerals/minerals-choices.directive.html
+++ b/www/app/spot/minerals/minerals-choices.directive.html
@@ -1,13 +1,17 @@
 <div id='straboFormCtrlId' ng-controller='FormController as form'>
   <div ng-repeat='field in form.survey' class='strabo-form'>
     <div id='{{ field.name }}' ng-show='form.showField(field, vm.data)'>
-      <ion-input class='item-text-wrap strabo-choices-flex-container strabo-wrap' 
-        ng-class='form.setSelMultClass(field, vm.data)'>
-        <ion-checkbox name='{{ field.name }}' style="z-index: 1;" class="strabo-choices-flex-item" ng-checked='form.isOptionChecked(field.name, choice.name, vm.data)' 
-            ng-click='form.toggleChecked(field.name, choice.name, vm.data)'
-            ng-repeat='choice in form.choices | filter: { "list_name": field.type.split(" ")[1] }'
-            ng-required='{{ field.required }}'>
+      <ion-input class='item-text-wrap strabo-choices-flex-container strabo-wrap' ng-class='form.setSelMultClass(field, vm.data)'>
+        <ion-list class="list">
+          <ion-item class="item item-checkbox item-button-right" ng-repeat='choice in form.choices | filter: { "list_name": field.type.split(" ")[1] }'>
+            <label class="checkbox">
+              <input type="checkbox" ng-click="form.toggleChecked(field.name, choice.name, vm.data)" ng-required='{{ field.required }}' ng-checked='form.isOptionChecked(field.name, choice.name, vm.data)'>
+            </label>
             {{ choice.label }}
+            <button class=" button-small button-icon button ion-information-circled strabo-minerals-field-info-button" ng-click="vmChild.showMineralInfo(choice.name)">
+            </button>
+          </ion-item>
+        </ion-list>
         </ion-checkbox>
       </ion-input>
     </div>
