--- a/www/app/spot/minerals/minerals-modal.html
+++ b/www/app/spot/minerals/minerals-modal.html
@@ -1,20 +1,61 @@
 <ion-modal-view class="minerals-modals">
-  <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
-    <button class='button button-positive' ng-click='vmChild.submit()'>Save
-    </button>
-    <h1 class='title'>{{ vmChild.modalTitle }}</h1>
-    <div class='buttons'>
-      <button class='icon ion-close-round close-modal-button' ng-click='vmChild.mineralsModal.hide()'>
+    <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
+      <button class='button button-positive' ng-show="vmChild.mineralInfoState" ng-click='vmChild.submit()'>Save
       </button>
-    </div>
-  </ion-header-bar>
-  <ion-content>
-    <div class='button-bar'>
-      <button class='button button-full' ng-click='vmChild.switchMineralsForm("most_common")' ng-class="{'spot-tab-active': vmChild.activeState === 'most_common'}">Most Common</button>
-      <button class='button button-full' ng-click='vmChild.switchMineralsForm("all")' ng-class="{'spot-tab-active': vmChild.activeState === 'all'}">All</button>
-    </div>
-    <form name='straboForm' novalidate=''>
-      <strabo-minerals-choices-directive/>
-    </form>
-  </ion-content>
-</ion-modal-view>
+      <button class='button button-icon icon ion-arrow-left-c ' ng-hide="vmChild.mineralInfoState" ng-click='vmChild.hideMineralInfo();'>
+      </button>
+      <h1 class='title'>{{ vmChild.modalTitle }}</h1>
+      <div class='buttons'>
+        <button class='icon ion-close-round close-modal-button' ng-click='vmChild.mineralsModal.hide()'>
+        </button>
+      </div>
+    </ion-header-bar>
+    <ion-content>
+      <div ng-show="vmChild.mineralInfoState">
+        <div class='button-bar'>
+          <button class='button button-full' ng-click='vmChild.switchMineralsForm("most_common")'
+           ng-class="{'spot-tab-active': vmChild.activeState === 'most_common'}">Most Common</button>
+          <button class='button button-full' ng-click='vmChild.switchMineralsForm("all")' 
+          ng-class="{'spot-tab-active': vmChild.activeState === 'all'}">All</button>
+        </div>
+        <form name='straboForm' novalidate=''>
+          <strabo-minerals-choices-directive/>
+        </form>
+      </div>
+      <div ng-hide="vmChild.mineralInfoState" class="padding">
+        <div ng-show="vmChild.mineralInfo" class="mineral-info-display">
+          <div class="row">
+            <span class="mineral-title">Mineral:</span>
+            {{ vmChild.mineralInfo.Mineral }}
+          </div>
+          <div class="row">
+            <span class="mineral-title">Formula:</span>
+            {{ vmChild.mineralInfo.Formula }}
+          </div>
+          <div class="row">
+            <span class="mineral-title">Crystal System:</span>
+            {{ vmChild.mineralInfo["Crystal System"] }}
+          </div>
+          <div class="row">
+            <span class="mineral-title">Hardness:</span>
+            {{ vmChild.mineralInfo.Hardness }}
+          </div>
+          <div class="row">
+            <span class="mineral-title">Distinguishing Features:</span>
+            {{ vmChild.mineralInfo['Distinguishing Features'] }}
+          </div>
+          <div class="row">
+            <span class="mineral-title"> Occurrence:</span>
+            {{ vmChild.mineralInfo.Occurrence }}
+          </div>
+          <div class="row">
+            <span class="mineral-title"> Associated Minerals:</span>
+            {{ vmChild.mineralInfo['Associated Minerals'] }}
+          </div>
+        </div>
+        <div ng-hide="vmChild.mineralInfo">
+          There is no description given for this mineral
+        </div>
+      </div>
+    </ion-content>
+  </ion-modal-view>
