Micro: Changes only for Web Development version (show manage project options and don't auto login) - Must revert on merge into master

--- a/www/app/project/manage/manage-project.web.html
+++ b/www/app/project/manage/manage-project.web.html
@@ -1,6 +1,9 @@
 <div class="center-block">
   <div class="strabo-subheader">
-    <div class="text-center strabo-subheader-text">Manage Project</div>
+    <div class="text-center strabo-subheader-text">Manage Project
+      <button ng-click='vm.popover.show($event)'
+              class='button button-icon icon ion-more rotate-90 subheader-right'></button>
+    </div>
   </div>
   <strabo-manage-project-directive></strabo-manage-project-directive>
 </div>
