--- a/www/app/spot/minerals/minerals-choices.directive.html
+++ b/www/app/spot/minerals/minerals-choices.directive.html
@@ -1,8 +1,8 @@
 <div id='straboFormCtrlId' ng-controller='FormController as form'>
-  <div ng-repeat='field in form.survey' class='strabo-form'>
+  <div ng-repeat='field in form.survey' class='minerals-form'>
     <div id='{{ field.name }}' ng-show='form.showField(field, vm.data)'>
       <ion-list class="list item-text-wrap strabo-choices-flex-container strabo-wrap" ng-class='form.setSelMultClass(field, vm.data)'>
-        <ion-item class="item item-checkbox item-button-right item-text-wrap strabo-choices-flex-item" ng-repeat='choice in form.choices | filter: { "list_name": field.type.split(" ")[1] }'>
+        <ion-item class="item item-checkbox mineral-item minerals-checkbox item-minerals-checkbox item-button-right item-text-wrap minerals-item" ng-repeat='choice in form.choices | filter: { "list_name": field.type.split(" ")[1] }'>
           <ion-grid>
             <ion-row >
               <ion-col>
@@ -14,7 +14,7 @@
               </ion-col>
             </ion-row>
           </ion-grid>
-          <button id="minerals-info-button" class=" button-small button-icon button ion-information-circled strabo-minerals-field-info-button"
+          <button id="minerals-info-button" class=" button-small button-icon button ion-information-circled minerals-field-info-button"
             ng-click="vmChild.showMineralInfo(choice.name, $event)">
           </button>
         </ion-item>
