--- a/www/app/spot/samples/samples-tab.directive.html
+++ b/www/app/spot/samples/samples-tab.directive.html
@@ -4,9 +4,17 @@
     <i class='icon ion-plus-circled'></i>
     <span class='button-text-big'>Add a Sample</span>
   </button>
+  <button ng-click='vmChild.addSubsample()'
+          class='button button-clear button-positive'>
+    <i class='icon ion-plus-circled'></i>
+    <span class='button-text-big'>Add a Subsample Spot</span>
+  </button>
+  <div class="padding" ng-show="vmChild.samples.length === 0 && vmChild.subsamples.length === 0">
+    There are no samples at this Spot.
+  </div>
   <ion-list>
     <ion-item class='item-text-wrap item-button-right'
-              ng-repeat='sample in vm.spot.properties.samples | orderBy: "label" track by sample.id'>
+              ng-repeat='sample in vmChild.samples | orderBy: "label" track by sample.id'>
       <div ng-click='vmChild.editSample(sample)'>
         <b>{{ sample.label }}</b>
         <span ng-show='vm.getTagNames(sample)' class='list-sub'>
@@ -20,6 +28,20 @@
         <button class='button button-clear button-assertive' ng-click='vmChild.deleteSample(sample)'>
           <i class='icon ion-minus-circled'></i>
         </button>
+      </div>
+    </ion-item>
+  </ion-list>
+  <div class='field-group item item-divider' ng-show='vmChild.subsamples.length > 0'>
+    Subsample Spots
+  </div>
+  <ion-list>
+    <ion-item class='item-text-wrap item-button-right'
+              ng-repeat='spot in vmChild.subsamples | orderBy: "label" track by spot.properties.id'>
+      <div ng-click='vmChild.goToSubsampleSpot(spot)'>
+        <b>{{ spot.properties.name || 'Subsample Spot not found!'}}</b>
+      </div>
+      <div class='buttons'>
+        <img class='strabo-icon' align='right' src='img/link-break.png' ng-click='vmChild.unlinkSubsampleSpot(spot)'>
       </div>
     </ion-item>
   </ion-list>
