--- a/www/app/spot/samples/samples-tab.directive.html
+++ b/www/app/spot/samples/samples-tab.directive.html
@@ -7,7 +7,12 @@
   <button ng-click='vmChild.addSubsample()'
           class='button button-clear button-positive'>
     <i class='icon ion-plus-circled'></i>
-    <span class='button-text-big'>Add a Subsample Spot</span>
+    <span class='button-text-big'>Add a New Subsample Spot</span>
+  </button>
+  <button ng-click='vmChild.addExistingSubsample()'
+          class='button button-clear button-positive'>
+    <i class='icon ion-plus-circled'></i>
+    <span class='button-text-big'>Link to an Existing Subsample Spot</span>
   </button>
   <div class="padding" ng-show="vmChild.samples.length === 0 && vmChild.subsamples.length === 0">
     There are no samples at this Spot.
