Orientations: added scroll lock on clipboard-modal and BR in text

--- a/www/app/spot/orientations/clipboard-modal.html
+++ b/www/app/spot/orientations/clipboard-modal.html
@@ -10,7 +10,7 @@
     </ion-header-bar>
     <ion-content>
          <ion-item>
-           <div class="clipboard-modal-text">Paste orientation data from clipboard below. Must be in JSON format (see example):</div>
+           <div class="clipboard-modal-text">Paste orientation data from clipboard below.<br> Must be in JSON format (see example):</div>
           <textarea id="data" class="clipboard-data-modal" rows="25" placeholder='
           ----------------- EXAMPLE ---------------
           {         
