--- a/www/app/spot/orientations/clipboard-modal.html
+++ b/www/app/spot/orientations/clipboard-modal.html
@@ -8,13 +8,12 @@
             </button>
         </div>
     </ion-header-bar>
-    <ion-content>
-         <ion-item>
-           <div class="clipboard-modal-text">Paste orientation data from clipboard below.<br> Must be in JSON format (see example):</div>
+    <ion-content>         
+           <div class="padding clipboard-modal-text">Paste orientation data from clipboard in the box below.<br>You are able to edit the content before importing.<br> Must be in JSON format (see example):</div>
           <textarea id="data" class="clipboard-data-modal" rows="25" placeholder='
           ----------------- EXAMPLE ---------------
-          {         
-            "type": "FeatureCollection",         
+          {        
+            "type": "FeatureCollection",    
             "features": [         
               {         
                 "type": "Feature",          
@@ -45,8 +44,6 @@
               }          
             ]          
           }
-          '></textarea>
-        </ion-item>
-      </ion-list>
+          '></textarea>     
     </ion-content>
 </ion-modal-view>
