Added filter by Sample Spots to Spots Lists and removed case sensitivity for filter by Spot Name

--- a/www/app/spots/spots-filter-modal.html
+++ b/www/app/spots/spots-filter-modal.html
@@ -91,11 +91,15 @@
       </ion-checkbox>
       <ion-checkbox ng-checked='vm.isFilterConditionChecked("spotType", "image-basemap")'
                     ng-click='vm.checkedFilterCondition("spotType", "image-basemap")'>
-        Spots on an Image Basemap
+        Image Basemap Spots
       </ion-checkbox>
       <ion-checkbox ng-checked='vm.isFilterConditionChecked("spotType", "strat-section")'
                     ng-click='vm.checkedFilterCondition("spotType", "strat-section")'>
-        Spots in a Strat Section
+         Strat Section Spots
+      </ion-checkbox>
+      <ion-checkbox ng-checked='vm.isFilterConditionChecked("spotType", "samples")'
+                    ng-click='vm.checkedFilterCondition("spotType", "samples")'>
+        Sample Spots
       </ion-checkbox>
     </div>
     <br>
