Micro: Unhide buttons to create subsamples (initially hidden in commit 5dd142867248af36cd60cbe94fd79e19ea761b12)

--- a/www/app/spot/samples/samples-tab.directive.html
+++ b/www/app/spot/samples/samples-tab.directive.html
@@ -4,7 +4,7 @@
     <i class='icon ion-plus-circled'></i>
     <span class='button-text-big'>Add a Sample</span>
   </button>
-  <!--<button ng-click='vmChild.addSubsample()'
+  <button ng-click='vmChild.addSubsample()'
           class='button button-clear button-positive'>
     <i class='icon ion-plus-circled'></i>
     <span class='button-text-big'>Add a New Subsample Spot</span>
@@ -13,7 +13,7 @@
           class='button button-clear button-positive'>
     <i class='icon ion-plus-circled'></i>
     <span class='button-text-big'>Link to an Existing Subsample Spot</span>
-  </button>-->
+  </button>
   <div class="padding" ng-show="vmChild.samples.length === 0 && vmChild.subsamples.length === 0">
     There are no samples at this Spot.
   </div>
