Project:  fixed field name validation and changed button style

--- a/www/app/project/manage/new-project-modal.html
+++ b/www/app/project/manage/new-project-modal.html
@@ -1,8 +1,8 @@
 <form name='straboForm' novalidate=''>
   <ion-modal-view>
     <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
-      <button class='button icon ion-checkmark-circled button-clear'
-              ng-click='vm.newProject()'>
+      <button class='button icon button button-positive'
+              ng-click='vm.newProject()'>Save
       </button>
       <h1 class='title'>Create a New Project</h1>
       <button class='button icon ion-close-round button-clear'
