Micro: Removed Micro Mode and added Micro Image Types to trigger Micro Map workspace

--- a/www/app/maps/thin-section/thin-section.web.html
+++ b/www/app/maps/thin-section/thin-section.web.html
@@ -3,13 +3,13 @@
     <ion-list ng-show='vm.images.length > 0'>
       <ion-item ng-repeat='image in vm.images | orderBy:"name" track by image.id'
                 ng-click='vm.toggleImageSelected(image)'>
-        <ion-label>{{ image.name || 'Untitled' }}</ion-label>
+        <ion-label>{{ image.title || 'Untitled' }}</ion-label>
         <a><img ng-src='{{ vm.getImageSrc(image.id) }}' id='{{ image.id }}' width='200' height='200'></a>
       </ion-item>
     </ion-list>
     <div class='padding' ng-hide='vm.images.length > 0'>
       No images in this Spot, {{ vm.thisSpotWithThinSection.properties.name }}.
-      Add images to this Spot from the Spot page for this Thin Section. See below.
+      Add images to this Spot from the Spot page for this Micrograph. See below.
       <button ng-click='vm.goToSpot(vm.thisSpotWithThinSection.properties.id, "images")'
               class='button'>
         {{vm.thisSpotWithThinSection.properties.name}}</button>
