--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -65,8 +65,8 @@
         <ion-item nav-clear menu-close href='#/app/strat-sections' ng-show='vm.getIsMode("strat_mode")'>
           Strat Sections
         </ion-item>
-        <ion-item nav-clear menu-close href='#/app/thin-sections' ng-show='vm.getIsMode("thin_section_mode")'>
-          Thin Sections
+        <ion-item nav-clear menu-close href='#/app/thin-sections' ng-show='vm.showMicrographWorkspace()'>
+          Micrographs
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/other-maps'>
           Other Basemaps
