--- a/www/app/maps/thin-sections/thin-sections.html
+++ b/www/app/maps/thin-sections/thin-sections.html
@@ -1,4 +1,4 @@
-<ion-view title='Thin Sections'>
+<ion-view title='Micrograph References'>
   <ion-nav-buttons side='left'>
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
