--- a/www/app/maps/thin-sections/thin-sections.web.html
+++ b/www/app/maps/thin-sections/thin-sections.web.html
@@ -1,14 +1,15 @@
 <div class="col-xs-3 strabo-column" id="left">
   <div class="strabo-subheader">
     <div class="subheader-left">
-      <div class="text-left strabo-subheader-text">Thin Sections</div>
+      <div class="text-left strabo-subheader-text">Micrograph References
+      </div>
     </div>
   </div>
   <strabo-thin-sections-directive></strabo-thin-sections-directive>
 </div>
 
 <div class="col-xs-9 map" id="right">
-  <div ng-hide="vm.thinSectionIdSelected" class="padding">No Thin Section Selected</div>
+  <div ng-hide="vm.thinSectionIdSelected" class="padding">No Micrograph Reference Selected</div>
   <div ng-show="vm.thinSectionIdSelected" class="map">
     <div ui-view="thin-section-view" class="map"></div>
   </div>
