Minerals: switched structure from spots to tags

--- a/www/app/spot/minerals/minerals-modal.html
+++ b/www/app/spot/minerals/minerals-modal.html
@@ -1,6 +1,6 @@
 <ion-modal-view class="minerals-modals">
     <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
-      <button class='button button-positive' ng-show="vmChild.isShowMineralList" ng-click='vmChild.submit()'>Save
+      <button class='button button-positive' ng-show="vmChild.isShowMineralList" ng-click='vmChild.submitMineral()'>Save
       </button>
       <button class='button button-icon icon ion-arrow-left-c' ng-hide="vmChild.isShowInfoOnly || vmChild.isShowMineralList" 
        ng-click='vmChild.hideMineralInfo();'>
