--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -152,6 +152,7 @@
     <script src="app/tag/documentation.directive.js"></script>
     <script src="app/tag/geologic-unit.directive.js"></script>
     <script src="app/tag/list.directive.js"></script>
+    <script src="app/tag/mineral.directive.js"></script>
     <script src="app/tag/other.directive.js"></script>
     <script src="app/tags/tags-filter.directive.js"></script>
     <script src="app/tags/tags-list-properties.directive.js"></script>
