Minerals: commenting out minerals collections js and html

--- a/www/app/spot/minerals/added-collection-modal.html
+++ b/www/app/spot/minerals/added-collection-modal.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<!-- <ion-modal-view>
     <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
         <button class='button button-positive' ng-click='vmChild.selectFromCollection()'>Save
         </button>
@@ -18,4 +18,4 @@
             {{ mineralCollection.name }}
         </ion-checkbox>
     </ion-content>
-</ion-modal-view>
+</ion-modal-view> -->
