--- a/www/app/project/manage/manage-project.directive.html
+++ b/www/app/project/manage/manage-project.directive.html
@@ -71,10 +71,10 @@
       </button>
     </ion-item>
   </ion-list>
-  <div class='field-group item item-divider'>
+  <!-- <div class='field-group item item-divider'>
     Saved Minerals Collections
-  </div>
-  <ion-list>
+  </div> -->
+  <!-- <ion-list>
     <div class='padding' ng-show='vm.mineralCollections.length <= 0'>
       There are no custom mineral collections added yet. To add a custom mineral collection go to the Minerals page, select desired minerals, and select "Save Collection"
     </div>
@@ -84,5 +84,5 @@
         <i class='icon ion-minus-circled'></i>
       </button>
     </ion-item>
-  </ion-list>
+  </ion-list> -->
 </div>
