adding new Tags Filter With Mineral directive html and js

--- a/www/index.html
+++ b/www/index.html
@@ -137,6 +137,7 @@
     <script src="app/tag/mineral.directive.js"></script>
     <script src="app/tag/other.directive.js"></script>
     <script src="app/tags/tags-filter.directive.js"></script>
+    <script src="app/tags/tags-filter-with-minerals.directive.js"></script>
     <script src="app/tags/tags-list-properties.directive.js"></script>
 
     <!-- new ng directives -->
