--- a/www/app/maps/thin-section/thin-section.html
+++ b/www/app/maps/thin-section/thin-section.html
@@ -12,7 +12,7 @@
         <ion-list ng-show='vm.images.length > 0'>
           <ion-item ng-repeat='image in vm.images | orderBy:"name" track by image.id'
                     ng-click='vm.toggleImageSelected(image)'>
-            <ion-label>{{ image.name || 'Untitled' }}</ion-label>
+            <ion-label>{{ image.title || 'Untitled' }}</ion-label>
             <a><img ng-src='{{ vm.getImageSrc(image.id) }}' id='{{ image.id }}' width='200' height='200'></a>
           </ion-item>
         </ion-list>
