--- a/www/index.html
+++ b/www/index.html
@@ -85,6 +85,7 @@
 
     <!-- ng spot tab controllers -->
     <script src="app/spot/3d-structures/3dstructures-tab.controller.js"></script>
+    <script src="app/spot/data/data-tab.controller.js"></script>
     <script src="app/spot/images/images-tab.controller.js"></script>
     <script src="app/spot/micro/thin-section/thin-section-tab.controller.js"></script>
     <script src="app/spot/minerals/minerals-tab.controller.js"></script>
@@ -156,6 +157,7 @@
     <script src="app/project/preferences/preferences.directive.js"></script>
     <script src="app/project/tools/tools.directive.js"></script>
     <script src="app/spot/3d-structures/3dstructures-tab.directive.js"></script>
+    <script src="app/spot/data/data-tab.directive.js"></script>
     <script src="app/spot/images/images-tab.directive.js"></script>
     <script src="app/spot/micro/thin-section/thin-section-tab.directive.js"></script>
     <script src="app/spot/minerals/minerals-tab.directive.js"></script>
